# autoarc

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  progress.rs  rar.rs  runner.rs  sevenz.rs  unar.rs  utils.rs  zip.rs
src/extractors/: mod.rs  rar.rs  sevenz.rs  unar.rs  zip.rs
src/fs/: classify.rs  mod.rs  paths.rs  video.rs
tests/: integration.rs
tests/fixtures/: gen.sh  hello.txt  split.7z.001  split.7z.002  split.7z.003  split.7z.004  split.7z.005
