[package]
name = "autoarc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Arichy <arichyx@qq.com>"]
description = "A concurrent Rust CLI that extracts ZIP / RAR / 7z archives in place \u2014 including multi-volume splits, SFX .exe payloads, and password-protected sets. Requires the `unar` / `lsar` binaries at runtime."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arichy/autoarc"
homepage = "https://github.com/Arichy/autoarc"
readme = "README.md"
keywords = ["archive", "extraction", "cli", "concurrent", "7zip"]
categories = ["command-line-utilities", "compression", "filesystem"]
exclude = [
    "test-dir/",
    "bak/",
    ".env",
    ".DS_Store",
]

[dependencies]
anyhow = "1.0.100"
infer = "0.19.0"
sevenz-rust2 = { version = "0.19.1", features = ["aes256", "deflate"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
unrar = "0.5.8"
zip = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.49", features = ["derive"] }
pathdiff = "0.2.3"
dotenvy = "0.15.7"
indicatif = "0.18.4"
console = "0.16.3"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
